--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -106,13 +106,22 @@ fieldset {
   background-color: white;
   color: #24A0ED;
   border: 1px solid #24A0ED;
+}
 
+#clear {
+  float: none;
+}
+
+#clear:hover {
+  background-color: white;
+  border: 1px solid grey;
 }
 
 .searchDiv {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
+  justify-content: center;
+  gap: 10px;
 }
 
 .bookItem {
