add smooth scrolling effect

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -5,6 +5,10 @@
   font-family: sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 header {
   background-color: #c3f8ff;
   text-align: center;
